accelerated-domains: add wincomn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87888,6 +87888,7 @@ server=/wincheers.com/114.114.114.114
 server=/wincheers.net/114.114.114.114
 server=/wincn.com/114.114.114.114
 server=/wincome.group/114.114.114.114
+server=/wincomn.com/114.114.114.114
 server=/wincoprint.net/114.114.114.114
 server=/wind.ink/114.114.114.114
 server=/wind.moe/114.114.114.114
