accelerated-domains: add noahpharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64231,6 +64231,7 @@ server=/no1news.com/114.114.114.114
 server=/no8ms.com/114.114.114.114
 server=/noahedu.com/114.114.114.114
 server=/noahgroup.com/114.114.114.114
+server=/noahpharm.com/114.114.114.114
 server=/noahsnail.com/114.114.114.114
 server=/noahsoft-vn.com/114.114.114.114
 server=/noahteck.com/114.114.114.114
