accelerated-domains: add peksung.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66529,6 +66529,7 @@ server=/peiyouwang.com/114.114.114.114
 server=/peizi.com/114.114.114.114
 server=/pejxjy.com/114.114.114.114
 server=/pek0b0.com/114.114.114.114
+server=/peksung.com/114.114.114.114
 server=/pellucid.art/114.114.114.114
 server=/pelorseating.com/114.114.114.114
 server=/pemap.com/114.114.114.114
