accelerated-domains: add bjcyjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15159,6 +15159,7 @@ server=/bjcta.net/114.114.114.114
 server=/bjcxdf.com/114.114.114.114
 server=/bjcycg.com/114.114.114.114
 server=/bjcyhui.com/114.114.114.114
+server=/bjcyjt.com/114.114.114.114
 server=/bjcymt.com/114.114.114.114
 server=/bjcymyy.com/114.114.114.114
 server=/bjcyzg.com/114.114.114.114
