--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15252,6 +15252,7 @@ server=/bjhxzlyy.com/114.114.114.114
 server=/bjhyly.com/114.114.114.114
 server=/bjhytjxjg.com/114.114.114.114
 server=/bjhzkq.com/114.114.114.114
+server=/bjhzzs.com/114.114.114.114
 server=/bjiab.com/114.114.114.114
 server=/bjiae.net/114.114.114.114
 server=/bjicpark.com/114.114.114.114
