accelerated-domains: add qichangqing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68787,6 +68787,7 @@ server=/qichacha.co/114.114.114.114
 server=/qichacha.com/114.114.114.114
 server=/qichacha.net/114.114.114.114
 server=/qichamao.com/114.114.114.114
+server=/qichangqing.com/114.114.114.114
 server=/qichangv.com/114.114.114.114
 server=/qichecailiao.com/114.114.114.114
 server=/qichechaoren.com/114.114.114.114
