accelerated-domains: add vcled.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84766,6 +84766,7 @@ server=/vcinchina.com/114.114.114.114
 server=/vckai.com/114.114.114.114
 server=/vckbase.com/114.114.114.114
 server=/vclass.com/114.114.114.114
+server=/vcled.com/114.114.114.114
 server=/vcloud-byte.com/114.114.114.114
 server=/vcloudapi.com/114.114.114.114
 server=/vcloudgtm.com/114.114.114.114
