--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15371,6 +15371,7 @@ server=/bjqyjjlb.com/114.114.114.114
 server=/bjqykc.com/114.114.114.114
 server=/bjqzhd.com/114.114.114.114
 server=/bjqzzh.net/114.114.114.114
+server=/bjraee.com/114.114.114.114
 server=/bjranqigz.com/114.114.114.114
 server=/bjrc.com/114.114.114.114
 server=/bjrcb.com/114.114.114.114
