--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9577,6 +9577,7 @@ server=/aerochina.net/114.114.114.114
 server=/aeryt111.fun/114.114.114.114
 server=/aesdrink.com/114.114.114.114
 server=/aesmysecurebill.com/114.114.114.114
+server=/aesoftland.com/114.114.114.114
 server=/aestheticbutler.xyz/114.114.114.114
 server=/aesucai.com/114.114.114.114
 server=/aet21.com/114.114.114.114
