accelerated-domains: add bjyubing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15532,6 +15532,7 @@ server=/bjys9.net/114.114.114.114
 server=/bjysyunsheng.com/114.114.114.114
 server=/bjythd.com/114.114.114.114
 server=/bjyuantong.com/114.114.114.114
+server=/bjyubing.com/114.114.114.114
 server=/bjyueshenzj.com/114.114.114.114
 server=/bjywt.com/114.114.114.114
 server=/bjyxl.com/114.114.114.114
