accelerated-domains: add haoyunlawyer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39766,6 +39766,7 @@ server=/haoyun13.com/114.114.114.114
 server=/haoyun56.com/114.114.114.114
 server=/haoyunbb.com/114.114.114.114
 server=/haoyunlaisz.com/114.114.114.114
+server=/haoyunlawyer.com/114.114.114.114
 server=/haoyunma.com/114.114.114.114
 server=/haoyuntech.com/114.114.114.114
 server=/haoyunwuyou.com/114.114.114.114
