accelerated-domains: add pwmat.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67983,6 +67983,7 @@ server=/pwand.com/114.114.114.114
 server=/pwddhc.xyz/114.114.114.114
 server=/pwjhg.com/114.114.114.114
 server=/pwkss.com/114.114.114.114
+server=/pwmat.com/114.114.114.114
 server=/pwmis.com/114.114.114.114
 server=/pwmqr.com/114.114.114.114
 server=/pword.net/114.114.114.114
