--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25043,6 +25043,7 @@ server=/daxuewang.com/114.114.114.114
 server=/day66.com/114.114.114.114
 server=/dayaguqin.com/114.114.114.114
 server=/dayainfo.com/114.114.114.114
+server=/dayalihome.com/114.114.114.114
 server=/dayangliangyou.com/114.114.114.114
 server=/dayangmotorcycle.com/114.114.114.114
 server=/dayangmuye.com/114.114.114.114
