--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13690,6 +13690,7 @@ server=/bceimg.com/114.114.114.114
 server=/bcelive.com/114.114.114.114
 server=/bcevod.com/114.114.114.114
 server=/bcewaf.com/114.114.114.114
+server=/bcfy188.com/114.114.114.114
 server=/bchdemo.site/114.114.114.114
 server=/bchrt.com/114.114.114.114
 server=/bcisz.org/114.114.114.114
