accelerated-domains: add qilaoshicaishui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68930,6 +68930,7 @@ server=/qilang.net/114.114.114.114
 server=/qilanxiaozhu.co/114.114.114.114
 server=/qilanxiaozhu.net/114.114.114.114
 server=/qilanxiaozhu.vip/114.114.114.114
+server=/qilaoshicaishui.com/114.114.114.114
 server=/qilecms.com/114.114.114.114
 server=/qiliangjia.com/114.114.114.114
 server=/qiliaokj.com/114.114.114.114
