--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69016,6 +69016,7 @@ server=/qingdou.net/114.114.114.114
 server=/qinger.name/114.114.114.114
 server=/qingf001.com/114.114.114.114
 server=/qingfanqie.com/114.114.114.114
+server=/qingfeichina.com/114.114.114.114
 server=/qingflow.com/114.114.114.114
 server=/qingfo.com/114.114.114.114
 server=/qingful.com/114.114.114.114
