--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82170,6 +82170,7 @@ server=/tooseo.com/114.114.114.114
 server=/tootour.com/114.114.114.114
 server=/toouoo.com/114.114.114.114
 server=/toouq.com/114.114.114.114
+server=/top-cnc.com/114.114.114.114
 server=/top-trust.com/114.114.114.114
 server=/top/114.114.114.114
 server=/top100school.com/114.114.114.114
