accelerated-domains: add physike.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66779,6 +66779,7 @@ server=/phpyun.com/114.114.114.114
 server=/phsb.com/114.114.114.114
 server=/physicalchina.vip/114.114.114.114
 server=/physicalclub.com/114.114.114.114
+server=/physike.com/114.114.114.114
 server=/physoe.com/114.114.114.114
 server=/phyuan.com/114.114.114.114
 server=/phyy.com/114.114.114.114
