accelerated-domains: add wenli-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87179,6 +87179,7 @@ server=/wenkuwenku.com/114.114.114.114
 server=/wenkuxiazai.net/114.114.114.114
 server=/wenkuzu.com/114.114.114.114
 server=/wenlc.com/114.114.114.114
+server=/wenli-china.com/114.114.114.114
 server=/wenlian123.com/114.114.114.114
 server=/wenlvlijiang.com/114.114.114.114
 server=/wenlvnews.com/114.114.114.114
