--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15135,6 +15135,7 @@ server=/bjcancer.org/114.114.114.114
 server=/bjcankao.com/114.114.114.114
 server=/bjcapital.com/114.114.114.114
 server=/bjcathay.com/114.114.114.114
+server=/bjcatzgroup.com/114.114.114.114
 server=/bjcdc.org/114.114.114.114
 server=/bjcdomain.com/114.114.114.114
 server=/bjceis.com/114.114.114.114
