accelerated-domains: add bjjinsong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15278,6 +15278,7 @@ server=/bjjhsw.com/114.114.114.114
 server=/bjjihui.com/114.114.114.114
 server=/bjjingdong.com/114.114.114.114
 server=/bjjinl.com/114.114.114.114
+server=/bjjinsong.com/114.114.114.114
 server=/bjjiuhe.com/114.114.114.114
 server=/bjjizhun.com/114.114.114.114
 server=/bjjk66.com/114.114.114.114
