--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15313,6 +15313,7 @@ server=/bjktwe.com/114.114.114.114
 server=/bjkxgroup.com/114.114.114.114
 server=/bjkzcs.com/114.114.114.114
 server=/bjl777.com/114.114.114.114
+server=/bjlacc.com/114.114.114.114
 server=/bjlangbo.com/114.114.114.114
 server=/bjlanqiao.com/114.114.114.114
 server=/bjlaw995.com/114.114.114.114
