accelerated-domains: add nicenergy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63058,6 +63058,7 @@ server=/niceisp.com/114.114.114.114
 server=/nicekid.com/114.114.114.114
 server=/nicelabel.cc/114.114.114.114
 server=/niceloo.com/114.114.114.114
+server=/nicenergy.com/114.114.114.114
 server=/nicesnow.com/114.114.114.114
 server=/nicetheme.xyz/114.114.114.114
 server=/nicetuan.net/114.114.114.114
