--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15568,6 +15568,7 @@ server=/bjznkq.net/114.114.114.114
 server=/bjznnt.com/114.114.114.114
 server=/bjzph.com/114.114.114.114
 server=/bjzqw.com/114.114.114.114
+server=/bjzrzc.com/114.114.114.114
 server=/bjzs.cc/114.114.114.114
 server=/bjzs114.com/114.114.114.114
 server=/bjzunlaotang.com/114.114.114.114
