accelerated-domains: add chin-fine.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19524,6 +19524,7 @@ server=/chimatong.com/114.114.114.114
 server=/chimelong.com/114.114.114.114
 server=/chimezi.com/114.114.114.114
 server=/chimoph.com/114.114.114.114
+server=/chin-fine.com/114.114.114.114
 server=/china-10.com/114.114.114.114
 server=/china-3.com/114.114.114.114
 server=/china-315.com/114.114.114.114
