accelerated-domains: add qiuhua.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69276,6 +69276,7 @@ server=/qiucinews.com/114.114.114.114
 server=/qiue21.com/114.114.114.114
 server=/qiufaqf.com/114.114.114.114
 server=/qiufengblog.com/114.114.114.114
+server=/qiuhua.com/114.114.114.114
 server=/qiujuer.net/114.114.114.114
 server=/qiujunya.com/114.114.114.114
 server=/qiukuixinxi.com/114.114.114.114
