--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79058,6 +79058,7 @@ server=/symarathon.com/114.114.114.114
 server=/symboltek.com/114.114.114.114
 server=/symf-crm.com/114.114.114.114
 server=/symtc.com/114.114.114.114
+server=/syn-tron.com/114.114.114.114
 server=/syn029.com/114.114.114.114
 server=/synacast.com/114.114.114.114
 server=/synball.com/114.114.114.114
