--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18669,6 +18669,7 @@ server=/ceshi112.com/114.114.114.114
 server=/ceshigo.com/114.114.114.114
 server=/ceshigu.com/114.114.114.114
 server=/ceshiren.com/114.114.114.114
+server=/cesinet.com/114.114.114.114
 server=/cesipc.com/114.114.114.114
 server=/cespc.com/114.114.114.114
 server=/cesu.net/114.114.114.114
