accelerated-domains: add equalocean.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29642,6 +29642,7 @@ server=/eqlky.com/114.114.114.114
 server=/eqmis.com/114.114.114.114
 server=/eqmobi.com/114.114.114.114
 server=/eqnvip.com/114.114.114.114
+server=/equalocean.com/114.114.114.114
 server=/equdong.net/114.114.114.114
 server=/equipmentimes.com/114.114.114.114
 server=/equity-incentive.com/114.114.114.114
