--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53257,6 +53257,7 @@ server=/kpblw.com/114.114.114.114
 server=/kpdhk.com/114.114.114.114
 server=/kpfans.com/114.114.114.114
 server=/kpfqg.com/114.114.114.114
+server=/kphwchem.com/114.114.114.114
 server=/kpjushi.com/114.114.114.114
 server=/kpkpw.com/114.114.114.114
 server=/kplanet.vip/114.114.114.114
