--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14387,6 +14387,7 @@ server=/bgosp.com/114.114.114.114
 server=/bgrbjt.com/114.114.114.114
 server=/bgrdh.com/114.114.114.114
 server=/bgren.com/114.114.114.114
+server=/bgri.com/114.114.114.114
 server=/bgrimm.com/114.114.114.114
 server=/bgs123.com/114.114.114.114
 server=/bgsdk.net/114.114.114.114
