--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12228,6 +12228,7 @@ server=/aube-archi.com/114.114.114.114
 server=/aubemobile.com/114.114.114.114
 server=/aubor-ind.com/114.114.114.114
 server=/aucanlink.com/114.114.114.114
+server=/auchexpo.com/114.114.114.114
 server=/aucnln.com/114.114.114.114
 server=/audan2011.com/114.114.114.114
 server=/audio-gd.com/114.114.114.114
