--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32968,6 +32968,7 @@ server=/gacmotor.com/114.114.114.114
 server=/gacrnd.com/114.114.114.114
 server=/gacsofinco.com/114.114.114.114
 server=/gadanhua.com/114.114.114.114
+server=/gae-pro.com/114.114.114.114
 server=/gae-yfeigaggoagjag.com/114.114.114.114
 server=/gaeadata.com/114.114.114.114
 server=/gaeamobile-inc.net/114.114.114.114
