accelerated-domains: add gzhm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38606,6 +38606,7 @@ server=/gzhfydgc.com/114.114.114.114
 server=/gzhifi.com/114.114.114.114
 server=/gzhkl.com/114.114.114.114
 server=/gzhkzyyy.com/114.114.114.114
+server=/gzhm.com/114.114.114.114
 server=/gzhornet.com/114.114.114.114
 server=/gzhotelgroup.com/114.114.114.114
 server=/gzhpaier.com/114.114.114.114
