--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38483,6 +38483,7 @@ server=/gyzdh.com/114.114.114.114
 server=/gyzfbz.net/114.114.114.114
 server=/gyzsgd.com/114.114.114.114
 server=/gz-begreen.com/114.114.114.114
+server=/gz-chantou.com/114.114.114.114
 server=/gz-cmc.com/114.114.114.114
 server=/gz-cube.com/114.114.114.114
 server=/gz-data.com/114.114.114.114
