--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38648,6 +38648,7 @@ server=/gzjkqh.com/114.114.114.114
 server=/gzjkyljt.com/114.114.114.114
 server=/gzjpad.com/114.114.114.114
 server=/gzjqd.com/114.114.114.114
+server=/gzjrkg.com/114.114.114.114
 server=/gzjsxh.com/114.114.114.114
 server=/gzjtjx.com/114.114.114.114
 server=/gzjtjy.com/114.114.114.114
