accelerated-domains: add gzmcg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38685,6 +38685,7 @@ server=/gzm1.com/114.114.114.114
 server=/gzmama.com/114.114.114.114
 server=/gzmath.com/114.114.114.114
 server=/gzmc668.com/114.114.114.114
+server=/gzmcg.com/114.114.114.114
 server=/gzmediaclick.com/114.114.114.114
 server=/gzmeichang.com/114.114.114.114
 server=/gzmiden.com/114.114.114.114
