--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19998,6 +19998,7 @@ server=/chinahrt.com/114.114.114.114
 server=/chinahte.com/114.114.114.114
 server=/chinahtz.com/114.114.114.114
 server=/chinahuashan.com/114.114.114.114
+server=/chinahuaxue.com/114.114.114.114
 server=/chinahuben.com/114.114.114.114
 server=/chinahudong.com/114.114.114.114
 server=/chinahugong.com/114.114.114.114
