accelerated-domains: add lantumap.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54392,6 +54392,7 @@ server=/lantidan.com/114.114.114.114
 server=/lanting123.com/114.114.114.114
 server=/lantinglou.com/114.114.114.114
 server=/lantujx.com/114.114.114.114
+server=/lantumap.com/114.114.114.114
 server=/lantushiji.com/114.114.114.114
 server=/lanuss.com/114.114.114.114
 server=/lanvote.com/114.114.114.114
