--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54536,6 +54536,7 @@ server=/laozu.com/114.114.114.114
 server=/laozuo.org/114.114.114.114
 server=/lapc.cc/114.114.114.114
 server=/lapin365.com/114.114.114.114
+server=/laplace-semi.com/114.114.114.114
 server=/lapulace.com/114.114.114.114
 server=/laravel-admin.org/114.114.114.114
 server=/laravel-china.org/114.114.114.114
