--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80686,6 +80686,7 @@ server=/teleows.com/114.114.114.114
 server=/televivi.com/114.114.114.114
 server=/telfri.net/114.114.114.114
 server=/teligen-cloud.com/114.114.114.114
+server=/teligen.net/114.114.114.114
 server=/teliute.org/114.114.114.114
 server=/telking.com/114.114.114.114
 server=/tell520.com/114.114.114.114
