accelerated-domains: add zcjce.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98858,6 +98858,7 @@ server=/zcitidc.com/114.114.114.114
 server=/zcitidc.net/114.114.114.114
 server=/zciv.com/114.114.114.114
 server=/zcjbgame.com/114.114.114.114
+server=/zcjce.com/114.114.114.114
 server=/zcjhsdk.com/114.114.114.114
 server=/zcjxedu.com/114.114.114.114
 server=/zckb001.com/114.114.114.114
