accelerated-domains: add biuged.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14990,6 +14990,7 @@ server=/bitvh.com/114.114.114.114
 server=/bitzsoft.com/114.114.114.114
 server=/biubiu.tv/114.114.114.114
 server=/biubiu001.com/114.114.114.114
+server=/biuged.com/114.114.114.114
 server=/biulie.com/114.114.114.114
 server=/biusoft.com/114.114.114.114
 server=/biwaihui.com/114.114.114.114
