--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22257,6 +22257,7 @@ server=/cnpharm.com/114.114.114.114
 server=/cnphotos.net/114.114.114.114
 server=/cnpickups.com/114.114.114.114
 server=/cnpicl.com/114.114.114.114
+server=/cnpiecgb.com/114.114.114.114
 server=/cnpiecsb.com/114.114.114.114
 server=/cnpingpang.com/114.114.114.114
 server=/cnpkm.com/114.114.114.114
