--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29129,6 +29129,7 @@ server=/ehafo.com/114.114.114.114
 server=/ehaier.com/114.114.114.114
 server=/ehaini.com/114.114.114.114
 server=/ehaiwang.com/114.114.114.114
+server=/ehang.com/114.114.114.114
 server=/ehanglian.com/114.114.114.114
 server=/ehangtian.com/114.114.114.114
 server=/ehaoyao.com/114.114.114.114
