accelerated-domains: add guangdong1039.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35722,6 +35722,7 @@ server=/guangdashuzi.com/114.114.114.114
 server=/guangdauser.com/114.114.114.114
 server=/guangdianyun.tv/114.114.114.114
 server=/guangdiu.com/114.114.114.114
+server=/guangdong1039.com/114.114.114.114
 server=/guangdonggames.com/114.114.114.114
 server=/guangdonglong.com/114.114.114.114
 server=/guangdongrc.com/114.114.114.114
