--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38750,6 +38750,7 @@ server=/gzshuimh.com/114.114.114.114
 server=/gzshujuhui.com/114.114.114.114
 server=/gzshyk.com/114.114.114.114
 server=/gzsj.live/114.114.114.114
+server=/gzsjjs.com/114.114.114.114
 server=/gzsjyzx.com/114.114.114.114
 server=/gzslyy.com/114.114.114.114
 server=/gzsq.com/114.114.114.114
