--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38800,6 +38800,7 @@ server=/gztz.org/114.114.114.114
 server=/gztz120.com/114.114.114.114
 server=/gzu521.net/114.114.114.114
 server=/gzuc.net/114.114.114.114
+server=/gzuci.com/114.114.114.114
 server=/gzucm-yhyy.com/114.114.114.114
 server=/gzuni.com/114.114.114.114
 server=/gzv6.com/114.114.114.114
