accelerated-domains: add nsrcup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64540,6 +64540,7 @@ server=/nslifang.com/114.114.114.114
 server=/nsm-electrical.com/114.114.114.114
 server=/nsmodel.com/114.114.114.114
 server=/nsoad.com/114.114.114.114
+server=/nsrcup.com/114.114.114.114
 server=/nsrfww.com/114.114.114.114
 server=/nsrjlb.com/114.114.114.114
 server=/nsseii.com/114.114.114.114
