--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71461,6 +71461,7 @@ server=/rising-eo.com/114.114.114.114
 server=/risingpenny.com/114.114.114.114
 server=/riskbird.com/114.114.114.114
 server=/riskivy.com/114.114.114.114
+server=/risongtc.com/114.114.114.114
 server=/risuiwd.com/114.114.114.114
 server=/risun.com/114.114.114.114
 server=/riswing.com/114.114.114.114
