accelerated-domains: add whampoa-design.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87479,6 +87479,7 @@ server=/whalefall.space/114.114.114.114
 server=/whaletvlive.com/114.114.114.114
 server=/whaleunique.com/114.114.114.114
 server=/whalipaycs.com/114.114.114.114
+server=/whampoa-design.com/114.114.114.114
 server=/whamspa.com/114.114.114.114
 server=/whasmcd.com/114.114.114.114
 server=/whatbuytoday.com/114.114.114.114
