--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99018,6 +99018,7 @@ server=/zeesin.com/114.114.114.114
 server=/zegarkirepliki.pl/114.114.114.114
 server=/zego.im/114.114.114.114
 server=/zeguoren.com/114.114.114.114
+server=/zeheng.com/114.114.114.114
 server=/zeidei.com/114.114.114.114
 server=/zeisis.com/114.114.114.114
 server=/zeisp.com/114.114.114.114
