--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12984,6 +12984,7 @@ server=/baina.com/114.114.114.114
 server=/bainaben.com/114.114.114.114
 server=/bainaruibusiness.com/114.114.114.114
 server=/baineng.cc/114.114.114.114
+server=/bainmedical.net/114.114.114.114
 server=/baiozhuntuixing.com/114.114.114.114
 server=/baipin.pw/114.114.114.114
 server=/baiqianxin.com/114.114.114.114
