accelerated-domains: add gzgcsmart.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38592,6 +38592,7 @@ server=/gzfsnet.com/114.114.114.114
 server=/gzgajy.com/114.114.114.114
 server=/gzgas.com/114.114.114.114
 server=/gzgayy.com/114.114.114.114
+server=/gzgcsmart.com/114.114.114.114
 server=/gzgdkq.com/114.114.114.114
 server=/gzgdwl.com/114.114.114.114
 server=/gzgjcm.com/114.114.114.114
