--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38871,6 +38871,7 @@ server=/gzzhanmei.com/114.114.114.114
 server=/gzzhitu.com/114.114.114.114
 server=/gzzhrong.com/114.114.114.114
 server=/gzziri.com/114.114.114.114
+server=/gzzkjc.net/114.114.114.114
 server=/gzzkzj.com/114.114.114.114
 server=/gzzkzsw.com/114.114.114.114
 server=/gzzldq.com/114.114.114.114
