accelerated-domains: add sealien.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73464,6 +73464,7 @@ server=/sealaly.net/114.114.114.114
 server=/sealand100.com/114.114.114.114
 server=/sealandtableware.com/114.114.114.114
 server=/sealeadbattery.com/114.114.114.114
+server=/sealien.net/114.114.114.114
 server=/sealimg.com/114.114.114.114
 server=/sealos.run/114.114.114.114
 server=/sealui.com/114.114.114.114
