accelerated-domains: add unicmicro.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84110,6 +84110,7 @@ server=/unicde.com/114.114.114.114
 server=/unicloud.com/114.114.114.114
 server=/unicloudgov.com/114.114.114.114
 server=/unicloudsrv.com/114.114.114.114
+server=/unicmicro.com/114.114.114.114
 server=/unicom-cz.com/114.114.114.114
 server=/unicomgd.com/114.114.114.114
 server=/unicomjnwy.com/114.114.114.114
