--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19541,6 +19541,7 @@ server=/china-aseanbis.com/114.114.114.114
 server=/china-asm.com/114.114.114.114
 server=/china-audit.com/114.114.114.114
 server=/china-b.com/114.114.114.114
+server=/china-baiyun.com/114.114.114.114
 server=/china-bestmind.com/114.114.114.114
 server=/china-biding.com/114.114.114.114
 server=/china-bluestar.com/114.114.114.114
