--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36044,6 +36044,7 @@ server=/guobaihui.com/114.114.114.114
 server=/guobaoyou.com/114.114.114.114
 server=/guobensd.com/114.114.114.114
 server=/guobiao99.com/114.114.114.114
+server=/guobiaotest.com/114.114.114.114
 server=/guoboshi.com/114.114.114.114
 server=/guocaiqinghai.com/114.114.114.114
 server=/guochaos.com/114.114.114.114
