--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38708,6 +38708,7 @@ server=/gzmri.com/114.114.114.114
 server=/gzmtr.com/114.114.114.114
 server=/gzmtrticket.com/114.114.114.114
 server=/gzmylike.com/114.114.114.114
+server=/gznaturn.com/114.114.114.114
 server=/gznbsyy.com/114.114.114.114
 server=/gzncstudios.com/114.114.114.114
 server=/gznemo.com/114.114.114.114
