--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38713,6 +38713,7 @@ server=/gznbsyy.com/114.114.114.114
 server=/gzncstudios.com/114.114.114.114
 server=/gznemo.com/114.114.114.114
 server=/gznf.net/114.114.114.114
+server=/gznftz.com/114.114.114.114
 server=/gzngn.com/114.114.114.114
 server=/gznict.com/114.114.114.114
 server=/gznotes.com/114.114.114.114
