--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73853,6 +73853,7 @@ server=/sfsigroup.com/114.114.114.114
 server=/sfsw2000.com/114.114.114.114
 server=/sftfin.com/114.114.114.114
 server=/sftj.net/114.114.114.114
+server=/sfund.com/114.114.114.114
 server=/sfvip1.com/114.114.114.114
 server=/sfwxf.com/114.114.114.114
 server=/sfxd.cc/114.114.114.114
