accelerated-domains: add gzselon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38751,6 +38751,7 @@ server=/gzrtnet.com/114.114.114.114
 server=/gzrycl.com/114.114.114.114
 server=/gzschknyy.com/114.114.114.114
 server=/gzsdwrmyy.com/114.114.114.114
+server=/gzselon.com/114.114.114.114
 server=/gzshaudio.com/114.114.114.114
 server=/gzshuangbao.com/114.114.114.114
 server=/gzshuimh.com/114.114.114.114
