--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22170,6 +22170,7 @@ server=/cnlng.com/114.114.114.114
 server=/cnlot.net/114.114.114.114
 server=/cnlso.com/114.114.114.114
 server=/cnluolun.com/114.114.114.114
+server=/cnlushan.com/114.114.114.114
 server=/cnmagtec.com/114.114.114.114
 server=/cnmanhua.com/114.114.114.114
 server=/cnmansi.com/114.114.114.114
