accelerated-domains: add kormee.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53236,6 +53236,7 @@ server=/koreabt.com/114.114.114.114
 server=/koreaxing.com/114.114.114.114
 server=/koreniztreh.net/114.114.114.114
 server=/korirl.com/114.114.114.114
+server=/kormee.com/114.114.114.114
 server=/koronsoft.com/114.114.114.114
 server=/korosensei.com/114.114.114.114
 server=/kortatb.com/114.114.114.114
