--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58976,6 +58976,7 @@ server=/matrix-net.tech/114.114.114.114
 server=/matrixchuang.com/114.114.114.114
 server=/matrixerse.com/114.114.114.114
 server=/matrixsens.com/114.114.114.114
+server=/matsubayashi-op.com/114.114.114.114
 server=/matsuri.site/114.114.114.114
 server=/matt33.com/114.114.114.114
 server=/matthewdays.com/114.114.114.114
