--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62239,6 +62239,7 @@ server=/namisoft.com/114.114.114.114
 server=/namitiyu.com/114.114.114.114
 server=/namkwonglog.com/114.114.114.114
 server=/namoc.org/114.114.114.114
+server=/nan-cable.com/114.114.114.114
 server=/nan1688.com/114.114.114.114
 server=/nanbeige.com/114.114.114.114
 server=/nanbeijt.com/114.114.114.114
