--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31502,6 +31502,7 @@ server=/fineway.com/114.114.114.114
 server=/finewyx.com/114.114.114.114
 server=/fineyoga.com/114.114.114.114
 server=/finezb.com/114.114.114.114
+server=/finger-cnc.com/114.114.114.114
 server=/finger66.com/114.114.114.114
 server=/fingerflyapp.com/114.114.114.114
 server=/fingerjoys.com/114.114.114.114
