--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38506,6 +38506,7 @@ server=/gz-junan.com/114.114.114.114
 server=/gz-lodihair.com/114.114.114.114
 server=/gz-notary.com/114.114.114.114
 server=/gz-shanguang.com/114.114.114.114
+server=/gz-spi.com/114.114.114.114
 server=/gz-tencentclb.cloud/114.114.114.114
 server=/gz-xinghe.com/114.114.114.114
 server=/gz-xinyu.com/114.114.114.114
