--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59146,6 +59146,7 @@ server=/mcjd.net/114.114.114.114
 server=/mcmarkets.com/114.114.114.114
 server=/mcmaster-asia.com/114.114.114.114
 server=/mcmssc.com/114.114.114.114
+server=/mcmtek.com/114.114.114.114
 server=/mcmusic.hk/114.114.114.114
 server=/mcobj.com/114.114.114.114
 server=/mcoo.cc/114.114.114.114
