--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59381,6 +59381,7 @@ server=/meihuapacking.com/114.114.114.114
 server=/meihuboyue.com/114.114.114.114
 server=/meihudong.com/114.114.114.114
 server=/meihutong.com/114.114.114.114
+server=/meiji-icecream.com/114.114.114.114
 server=/meijia51.com/114.114.114.114
 server=/meijia66.com/114.114.114.114
 server=/meijiaedu.com/114.114.114.114
