--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67719,6 +67719,7 @@ server=/primadiagnostic.com/114.114.114.114
 server=/primarychina.com/114.114.114.114
 server=/prime-care.com/114.114.114.114
 server=/prime-semi.com/114.114.114.114
+server=/prime3c.com/114.114.114.114
 server=/primerachina.com/114.114.114.114
 server=/primeton.com/114.114.114.114
 server=/print86.com/114.114.114.114
