accelerated-domains: add roboeyeai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71610,6 +71610,7 @@ server=/roadsignads.com/114.114.114.114
 server=/roaing.com/114.114.114.114
 server=/robam.com/114.114.114.114
 server=/robei.com/114.114.114.114
+server=/roboeyeai.com/114.114.114.114
 server=/roboo.com/114.114.114.114
 server=/robook.com/114.114.114.114
 server=/robopeak.net/114.114.114.114
