--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72207,6 +72207,7 @@ server=/ruyishi.com/114.114.114.114
 server=/ruyo.cc/114.114.114.114
 server=/ruyo.net/114.114.114.114
 server=/ruyu.com/114.114.114.114
+server=/ruyuecx.com/114.114.114.114
 server=/ruyuexs.com/114.114.114.114
 server=/ruzhipin.cc/114.114.114.114
 server=/ruzw.com/114.114.114.114
