accelerated-domains: add scutech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73131,6 +73131,7 @@ server=/scufida.com/114.114.114.114
 server=/scujj.com/114.114.114.114
 server=/scunionpay.com/114.114.114.114
 server=/scusec.org/114.114.114.114
+server=/scutech.com/114.114.114.114
 server=/scutsee.com/114.114.114.114
 server=/scuvc.com/114.114.114.114
 server=/scw-cable.com/114.114.114.114
