accelerated-domains: add sinopharm-gz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76289,6 +76289,7 @@ server=/sinopechyzx.com/114.114.114.114
 server=/sinopecnews.com/114.114.114.114
 server=/sinopecsales.com/114.114.114.114
 server=/sinopecsenmeifj.com/114.114.114.114
+server=/sinopharm-gz.com/114.114.114.114
 server=/sinopharm.com/114.114.114.114
 server=/sinopharmdbj.com/114.114.114.114
 server=/sinopharmholding.com/114.114.114.114
