accelerated-domains: add xlibai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92232,6 +92232,7 @@ server=/xlhk.net/114.114.114.114
 server=/xlhs.com/114.114.114.114
 server=/xlhyc.com/114.114.114.114
 server=/xliawhile.com/114.114.114.114
+server=/xlibai.com/114.114.114.114
 server=/xlinclass.com/114.114.114.114
 server=/xlisp.net/114.114.114.114
 server=/xljly.com/114.114.114.114
