accelerated-domains: add guanhejx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35812,6 +35812,7 @@ server=/guangzhuiyuan.com/114.114.114.114
 server=/guangzizai.com/114.114.114.114
 server=/guangzjiaq.com/114.114.114.114
 server=/guanhaobio.com/114.114.114.114
+server=/guanhejx.com/114.114.114.114
 server=/guanhou.com/114.114.114.114
 server=/guanhoulz.com/114.114.114.114
 server=/guanhuaju.com/114.114.114.114
