--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38502,6 +38502,7 @@ server=/gz-dazo.com/114.114.114.114
 server=/gz-ejoy.com/114.114.114.114
 server=/gz-goam.com/114.114.114.114
 server=/gz-haoxiang.com/114.114.114.114
+server=/gz-hipower.com/114.114.114.114
 server=/gz-huayuan.com/114.114.114.114
 server=/gz-junan.com/114.114.114.114
 server=/gz-lodihair.com/114.114.114.114
