--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38761,6 +38761,7 @@ server=/gzschknyy.com/114.114.114.114
 server=/gzsdwrmyy.com/114.114.114.114
 server=/gzselon.com/114.114.114.114
 server=/gzshaudio.com/114.114.114.114
+server=/gzshiran.com/114.114.114.114
 server=/gzshuangbao.com/114.114.114.114
 server=/gzshuimh.com/114.114.114.114
 server=/gzshujuhui.com/114.114.114.114
