accelerated-domains: add gzwswjc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38835,6 +38835,7 @@ server=/gzwhir.com/114.114.114.114
 server=/gzwonbo.com/114.114.114.114
 server=/gzwrit.com/114.114.114.114
 server=/gzwrjt.com/114.114.114.114
+server=/gzwswjc.com/114.114.114.114
 server=/gzwzhw.com/114.114.114.114
 server=/gzxdd.com/114.114.114.114
 server=/gzxdf.com/114.114.114.114
