--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50330,6 +50330,7 @@ server=/jobvvv.com/114.114.114.114
 server=/jobxinpg.com/114.114.114.114
 server=/jobyp.com/114.114.114.114
 server=/jocat.com/114.114.114.114
+server=/joctech.com/114.114.114.114
 server=/jocund-gift.com/114.114.114.114
 server=/joe92.com/114.114.114.114
 server=/joessem.com/114.114.114.114
