accelerated-domains: add pulinmed.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67944,6 +67944,7 @@ server=/pujingjt888.com/114.114.114.114
 server=/pujiugame.com/114.114.114.114
 server=/pukinte.com/114.114.114.114
 server=/pule.com/114.114.114.114
+server=/pulinmed.com/114.114.114.114
 server=/pulisi.com/114.114.114.114
 server=/pulixingfu.com/114.114.114.114
 server=/pullwave.com/114.114.114.114
