--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80040,6 +80040,7 @@ server=/taiyiplus.com/114.114.114.114
 server=/taiyocablecn.com/114.114.114.114
 server=/taiyou.fund/114.114.114.114
 server=/taiyuanguanye.com/114.114.114.114
+server=/taiyuanqy.com/114.114.114.114
 server=/taiyulink.com/114.114.114.114
 server=/taizhouwater.com/114.114.114.114
 server=/taizibao.com/114.114.114.114
