accelerated-domains: add rjetech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71527,6 +71527,7 @@ server=/rj889.net/114.114.114.114
 server=/rjaaa.com/114.114.114.114
 server=/rjcopy.com/114.114.114.114
 server=/rjdk.org/114.114.114.114
+server=/rjetech.com/114.114.114.114
 server=/rjeye.com/114.114.114.114
 server=/rjfc110.com/114.114.114.114
 server=/rjghome.com/114.114.114.114
