accelerated-domains: add geoai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33866,6 +33866,7 @@ server=/geo-prism-cn.htcsense.com/114.114.114.114
 server=/geo-prism.htcsense.com/114.114.114.114
 server=/geo.kaspersky.com/114.114.114.114
 server=/geo2k.com/114.114.114.114
+server=/geoai.com/114.114.114.114
 server=/geocounter.net/114.114.114.114
 server=/geogsci.com/114.114.114.114
 server=/geoharbour.com/114.114.114.114
