accelerated-domains: add gzjob.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38664,6 +38664,7 @@ server=/gzjk120.com/114.114.114.114
 server=/gzjkfk.com/114.114.114.114
 server=/gzjkqh.com/114.114.114.114
 server=/gzjkyljt.com/114.114.114.114
+server=/gzjob.net/114.114.114.114
 server=/gzjpad.com/114.114.114.114
 server=/gzjqd.com/114.114.114.114
 server=/gzjrkg.com/114.114.114.114
