--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39835,6 +39835,7 @@ server=/haozu.com/114.114.114.114
 server=/haozujiaju.com/114.114.114.114
 server=/haozuojia.com/114.114.114.114
 server=/hapco-cn.com/114.114.114.114
+server=/hapg-hitachi.com/114.114.114.114
 server=/hapi123.net/114.114.114.114
 server=/hapids.com/114.114.114.114
 server=/hapingapp.com/114.114.114.114
