accelerated-domains: add huawo-wear.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43570,6 +43570,7 @@ server=/huaweiyun.com/114.114.114.114
 server=/huaweizdl.com/114.114.114.114
 server=/huawenfanyi.com/114.114.114.114
 server=/huawenwin.com/114.114.114.114
+server=/huawo-wear.com/114.114.114.114
 server=/huawote.com/114.114.114.114
 server=/huaxi.net/114.114.114.114
 server=/huaxi100.com/114.114.114.114
