accelerated-domains: add kinte-ind.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52835,6 +52835,7 @@ server=/kinpn.com/114.114.114.114
 server=/kinpoway.com/114.114.114.114
 server=/kinqee.com/114.114.114.114
 server=/kinsec.com/114.114.114.114
+server=/kinte-ind.com/114.114.114.114
 server=/kintiger.com/114.114.114.114
 server=/kinval.com/114.114.114.114
 server=/kinzhan.com/114.114.114.114
