accelerated-domains: add qytranslation.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70595,6 +70595,7 @@ server=/qyszyyy.com/114.114.114.114
 server=/qyt.com/114.114.114.114
 server=/qyt1902.com/114.114.114.114
 server=/qytdesign.com/114.114.114.114
+server=/qytranslation.com/114.114.114.114
 server=/qytst.com/114.114.114.114
 server=/qytxhy.com/114.114.114.114
 server=/qyunapp.com/114.114.114.114
