accelerated-domains: add cccclc-gd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17810,6 +17810,7 @@ server=/ccccc67kkkkk.com/114.114.114.114
 server=/ccccc78kkkkk.com/114.114.114.114
 server=/ccccc88kkkkk.com/114.114.114.114
 server=/cccccd.com/114.114.114.114
+server=/cccclc-gd.com/114.114.114.114
 server=/ccccoe.cc/114.114.114.114
 server=/ccccoe.com/114.114.114.114
 server=/cccdun.com/114.114.114.114
