accelerated-domains: add chem-stone.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19239,6 +19239,7 @@ server=/chelangauto.com/114.114.114.114
 server=/chelifang.com/114.114.114.114
 server=/chellex.com/114.114.114.114
 server=/chelun.com/114.114.114.114
+server=/chem-stone.com/114.114.114.114
 server=/chem17.com/114.114.114.114
 server=/chem234.com/114.114.114.114
 server=/chem31.com/114.114.114.114
