accelerated-domains: add gzupdc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38825,6 +38825,7 @@ server=/gzuc.net/114.114.114.114
 server=/gzuci.com/114.114.114.114
 server=/gzucm-yhyy.com/114.114.114.114
 server=/gzuni.com/114.114.114.114
+server=/gzupdc.com/114.114.114.114
 server=/gzv6.com/114.114.114.114
 server=/gzw.net/114.114.114.114
 server=/gzwanbao.com/114.114.114.114
