--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71450,6 +71450,7 @@ server=/rickysu.com/114.114.114.114
 server=/ricqo.com/114.114.114.114
 server=/ricterz.me/114.114.114.114
 server=/rictos.com/114.114.114.114
+server=/ridgepole.com/114.114.114.114
 server=/riecent.com/114.114.114.114
 server=/rifubao.com/114.114.114.114
 server=/rigen-bio.com/114.114.114.114
