accelerated-domains: add daangene.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24432,6 +24432,7 @@ server=/da3h.com/114.114.114.114
 server=/da88.net/114.114.114.114
 server=/daanbar.com/114.114.114.114
 server=/daanche.com/114.114.114.114
+server=/daangene.com/114.114.114.114
 server=/daanjiexi.com/114.114.114.114
 server=/daanwo.com/114.114.114.114
 server=/daba.com/114.114.114.114
