accelerated-domains: add epibiotek.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29612,6 +29612,7 @@ server=/epfrontier.com/114.114.114.114
 server=/epg-power.com/114.114.114.114
 server=/ephen.me/114.114.114.114
 server=/epian1.com/114.114.114.114
+server=/epibiotek.com/114.114.114.114
 server=/epichust.com/114.114.114.114
 server=/epinautomation.com/114.114.114.114
 server=/epinduo.com/114.114.114.114
