--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33494,6 +33494,7 @@ server=/gddcm.com/114.114.114.114
 server=/gddg-hy.com/114.114.114.114
 server=/gddg.cc/114.114.114.114
 server=/gddhn.com/114.114.114.114
+server=/gddidg.com/114.114.114.114
 server=/gddikasi.com/114.114.114.114
 server=/gddmsmc.com/114.114.114.114
 server=/gddqfs.com/114.114.114.114
