--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35741,6 +35741,7 @@ server=/guangdongtaiji.com/114.114.114.114
 server=/guangdongwater.com/114.114.114.114
 server=/guangdongyunchen.com/114.114.114.114
 server=/guangdv.com/114.114.114.114
+server=/guangfan.com/114.114.114.114
 server=/guangfeng.com/114.114.114.114
 server=/guangfulingyuan.com/114.114.114.114
 server=/guanggao.com/114.114.114.114
