accelerated-domains: add guangzhouamc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35812,6 +35812,7 @@ server=/guangyv.com/114.114.114.114
 server=/guangzhitui.com/114.114.114.114
 server=/guangzhou-logistics.com/114.114.114.114
 server=/guangzhou-marathon.com/114.114.114.114
+server=/guangzhouamc.com/114.114.114.114
 server=/guangzhougy.com/114.114.114.114
 server=/guangzhouyibo.com/114.114.114.114
 server=/guangzhouyizheng.com/114.114.114.114
