--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39377,6 +39377,7 @@ server=/hangmaquan.com/114.114.114.114
 server=/hangongjk.com/114.114.114.114
 server=/hangpai.org/114.114.114.114
 server=/hangpu-topsys.com/114.114.114.114
+server=/hangruntech.com/114.114.114.114
 server=/hangtianride.com/114.114.114.114
 server=/hangtunggroup.com/114.114.114.114
 server=/hanguangbaihuo.com/114.114.114.114
