--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50369,6 +50369,7 @@ server=/joinquant.com/114.114.114.114
 server=/joinsen.com/114.114.114.114
 server=/joinsuns.com/114.114.114.114
 server=/joint-harvest.com/114.114.114.114
+server=/jointas.com/114.114.114.114
 server=/jointech-cn.com/114.114.114.114
 server=/jointforce.com/114.114.114.114
 server=/joinusad.com/114.114.114.114
