accelerated-domains: add moonbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61103,6 +61103,7 @@ server=/moomooequity.com/114.114.114.114
 server=/moomootrustee.com/114.114.114.114
 server=/moomv.com/114.114.114.114
 server=/moonbasa.com/114.114.114.114
+server=/moonbio.com/114.114.114.114
 server=/moonbitlang.com/114.114.114.114
 server=/mooncell.wiki/114.114.114.114
 server=/mooncoalition.com/114.114.114.114
