accelerated-domains: add botny.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16172,6 +16172,7 @@ server=/botaoo.com/114.114.114.114
 server=/botaopac.com/114.114.114.114
 server=/botemotor.com/114.114.114.114
 server=/botnet.cc/114.114.114.114
+server=/botny.com/114.114.114.114
 server=/botocard.com/114.114.114.114
 server=/botongedu.com/114.114.114.114
 server=/botongr.com/114.114.114.114
