accelerated-domains: add ruixuncw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72117,6 +72117,7 @@ server=/ruixiaolu.com/114.114.114.114
 server=/ruixing.cc/114.114.114.114
 server=/ruixingkuaiji.com/114.114.114.114
 server=/ruixueys.com/114.114.114.114
+server=/ruixuncw.com/114.114.114.114
 server=/ruixunidc.com/114.114.114.114
 server=/ruixunidc.net/114.114.114.114
 server=/ruiyang-ra.com/114.114.114.114
