--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38594,6 +38594,7 @@ server=/gzdsw.com/114.114.114.114
 server=/gzdtcy168.com/114.114.114.114
 server=/gzduguo.com/114.114.114.114
 server=/gzdysx.com/114.114.114.114
+server=/gzdzbj.com/114.114.114.114
 server=/gzenxx.com/114.114.114.114
 server=/gzexpo.com/114.114.114.114
 server=/gzfc.net/114.114.114.114
