accelerated-domains: add tws.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83396,6 +83396,7 @@ server=/twoarmy.com/114.114.114.114
 server=/twoear.com/114.114.114.114
 server=/twowestcondos.com/114.114.114.114
 server=/twplink.xyz/114.114.114.114
+server=/tws.com/114.114.114.114
 server=/twsapp.com/114.114.114.114
 server=/twscholar.com/114.114.114.114
 server=/twsyue.com/114.114.114.114
