accelerated-domains: add gdairport.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33459,6 +33459,7 @@ server=/gdadjs.com/114.114.114.114
 server=/gdadri.com/114.114.114.114
 server=/gdahua.com/114.114.114.114
 server=/gdaii.com/114.114.114.114
+server=/gdairport.com/114.114.114.114
 server=/gdajk.com/114.114.114.114
 server=/gdapi.net/114.114.114.114
 server=/gdatacube.net/114.114.114.114
