accelerated-domains: add ccgdc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17857,6 +17857,7 @@ server=/ccfddl.com/114.114.114.114
 server=/ccfeb.com/114.114.114.114
 server=/ccfei.com/114.114.114.114
 server=/ccflow.org/114.114.114.114
+server=/ccgdc.com/114.114.114.114
 server=/ccgff.com/114.114.114.114
 server=/ccgfie.com/114.114.114.114
 server=/ccgim.com/114.114.114.114
