--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38691,6 +38691,7 @@ server=/gzjykj.com/114.114.114.114
 server=/gzjyypt.com/114.114.114.114
 server=/gzjzc.com/114.114.114.114
 server=/gzkaiheng.com/114.114.114.114
+server=/gzkaiyue.com/114.114.114.114
 server=/gzkangyuan.com/114.114.114.114
 server=/gzkcsj.com/114.114.114.114
 server=/gzkeeyun.com/114.114.114.114
