--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47865,6 +47865,7 @@ server=/jasonsemicon.com/114.114.114.114
 server=/jasonwatches.com/114.114.114.114
 server=/jasonzk.com/114.114.114.114
 server=/jasperxu.com/114.114.114.114
+server=/jatcochina.com/114.114.114.114
 server=/java-er.com/114.114.114.114
 server=/java1234.com/114.114.114.114
 server=/java2000.net/114.114.114.114
