--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48267,6 +48267,7 @@ server=/jeeseen.com/114.114.114.114
 server=/jeesite.com/114.114.114.114
 server=/jeewong.com/114.114.114.114
 server=/jeeyaa.com/114.114.114.114
+server=/jeeyor.com/114.114.114.114
 server=/jeffdingzone.com/114.114.114.114
 server=/jeffjade.com/114.114.114.114
 server=/jeffreyitstudio.com/114.114.114.114
