accelerated-domains: add oedtech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65050,6 +65050,7 @@ server=/oealy.com/114.114.114.114
 server=/oeasy.org/114.114.114.114
 server=/oec365.com/114.114.114.114
 server=/oecr.com/114.114.114.114
+server=/oedtech.com/114.114.114.114
 server=/oedun.com/114.114.114.114
 server=/oeebee.com/114.114.114.114
 server=/oeeee.com/114.114.114.114
