accelerated-domains: add weimibio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86957,6 +86957,7 @@ server=/weimaqi.net/114.114.114.114
 server=/weimeigu.net/114.114.114.114
 server=/weimi24.com/114.114.114.114
 server=/weimiaocaishang.com/114.114.114.114
+server=/weimibio.com/114.114.114.114
 server=/weimingcq.com/114.114.114.114
 server=/weimingedu.com/114.114.114.114
 server=/weimingkids.com/114.114.114.114
