--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30824,6 +30824,7 @@ server=/fb.mu/114.114.114.114
 server=/fbaichuan.com/114.114.114.114
 server=/fbank.com/114.114.114.114
 server=/fbaot.com/114.114.114.114
+server=/fbflex.com/114.114.114.114
 server=/fbghrcqggrksty.com/114.114.114.114
 server=/fbi.college/114.114.114.114
 server=/fbieq.com/114.114.114.114
