accelerated-domains: add gzbiogene.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38554,6 +38554,7 @@ server=/gzbawei.com/114.114.114.114
 server=/gzbeaton.com/114.114.114.114
 server=/gzbic.com/114.114.114.114
 server=/gzbio.net/114.114.114.114
+server=/gzbiogene.com/114.114.114.114
 server=/gzbl.com/114.114.114.114
 server=/gzblssly.com/114.114.114.114
 server=/gzbote.com/114.114.114.114
