accelerated-domains: add gzydnewmaterial.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38882,6 +38882,7 @@ server=/gzycdy.com/114.114.114.114
 server=/gzych.vip/114.114.114.114
 server=/gzycsjgs.com/114.114.114.114
 server=/gzyct.com/114.114.114.114
+server=/gzydnewmaterial.com/114.114.114.114
 server=/gzydong.com/114.114.114.114
 server=/gzydwh.com/114.114.114.114
 server=/gzyhg.vip/114.114.114.114
