accelerated-domains: add haiyisoft-gz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39285,6 +39285,7 @@ server=/haiyang.net/114.114.114.114
 server=/haiyi701.com/114.114.114.114
 server=/haiyingmt.com/114.114.114.114
 server=/haiyingshuju.com/114.114.114.114
+server=/haiyisoft-gz.com/114.114.114.114
 server=/haiymobi.com/114.114.114.114
 server=/haiyong.site/114.114.114.114
 server=/haiyuangabion.com/114.114.114.114
