accelerated-domains: add rcnep.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70994,6 +70994,7 @@ server=/rclbbs.com/114.114.114.114
 server=/rclolci.com/114.114.114.114
 server=/rclrow.com/114.114.114.114
 server=/rcmarble.com/114.114.114.114
+server=/rcnep.com/114.114.114.114
 server=/rcolab.com/114.114.114.114
 server=/rcpx.cc/114.114.114.114
 server=/rcss88.com/114.114.114.114
