--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19169,6 +19169,7 @@ server=/chcihe.com/114.114.114.114
 server=/chcmu.com/114.114.114.114
 server=/chcnav.com/114.114.114.114
 server=/chcoin.com/114.114.114.114
+server=/chcontrol.com/114.114.114.114
 server=/chcpay.com/114.114.114.114
 server=/chda.net/114.114.114.114
 server=/chdajob.com/114.114.114.114
