--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20111,6 +20111,7 @@ server=/chinamcache.com/114.114.114.114
 server=/chinamcloud.com/114.114.114.114
 server=/chinameinv.com/114.114.114.114
 server=/chinamendu.com/114.114.114.114
+server=/chinameng.net/114.114.114.114
 server=/chinamenwang.com/114.114.114.114
 server=/chinamerger.com/114.114.114.114
 server=/chinametro.net/114.114.114.114
