accelerated-domains: add zdnph.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99041,6 +99041,7 @@ server=/zdm.net/114.114.114.114
 server=/zdmimg.com/114.114.114.114
 server=/zdmq88.com/114.114.114.114
 server=/zdmr.net/114.114.114.114
+server=/zdnph.com/114.114.114.114
 server=/zdnscloud.biz/114.114.114.114
 server=/zdnscloud.com/114.114.114.114
 server=/zdnscloud.info/114.114.114.114
