--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38598,6 +38598,7 @@ server=/gzdli.com/114.114.114.114
 server=/gzdongmin.com/114.114.114.114
 server=/gzdryy.com/114.114.114.114
 server=/gzdsw.com/114.114.114.114
+server=/gzdtc.com/114.114.114.114
 server=/gzdtcy168.com/114.114.114.114
 server=/gzduguo.com/114.114.114.114
 server=/gzdysx.com/114.114.114.114
