accelerated-domains: add gzsgczb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38781,6 +38781,7 @@ server=/gzrycl.com/114.114.114.114
 server=/gzschknyy.com/114.114.114.114
 server=/gzsdwrmyy.com/114.114.114.114
 server=/gzselon.com/114.114.114.114
+server=/gzsgczb.com/114.114.114.114
 server=/gzshaudio.com/114.114.114.114
 server=/gzshiran.com/114.114.114.114
 server=/gzshuangbao.com/114.114.114.114
