--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38604,6 +38604,7 @@ server=/gzduguo.com/114.114.114.114
 server=/gzdysx.com/114.114.114.114
 server=/gzdzbj.com/114.114.114.114
 server=/gzenxx.com/114.114.114.114
+server=/gzeryun.com/114.114.114.114
 server=/gzexpo.com/114.114.114.114
 server=/gzfc.net/114.114.114.114
 server=/gzfenda.com/114.114.114.114
