accelerated-domains: add gzlig.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38711,6 +38711,7 @@ server=/gzkz88.com/114.114.114.114
 server=/gzlarc.com/114.114.114.114
 server=/gzlayl.com/114.114.114.114
 server=/gzlex.com/114.114.114.114
+server=/gzlig.com/114.114.114.114
 server=/gzlingli.com/114.114.114.114
 server=/gzliyuanhb.com/114.114.114.114
 server=/gzlpml.com/114.114.114.114
