--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38910,6 +38910,7 @@ server=/gzyyjt.net/114.114.114.114
 server=/gzyyma.com/114.114.114.114
 server=/gzyz699.com/114.114.114.114
 server=/gzzarts.com/114.114.114.114
+server=/gzzc-logistics.com/114.114.114.114
 server=/gzzhanmei.com/114.114.114.114
 server=/gzzhitu.com/114.114.114.114
 server=/gzzhrong.com/114.114.114.114
