accelerated-domains: add weibochem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86827,6 +86827,7 @@ server=/weibo.co/114.114.114.114
 server=/weibo.com/114.114.114.114
 server=/weibo.tv/114.114.114.114
 server=/weibocdn.com/114.114.114.114
+server=/weibochem.com/114.114.114.114
 server=/weibohelper.com/114.114.114.114
 server=/weiboi.com/114.114.114.114
 server=/weibolj.com/114.114.114.114
