accelerated-domains: add ccicgd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17885,6 +17885,7 @@ server=/ccic.com/114.114.114.114
 server=/ccic2.com/114.114.114.114
 server=/cciccloud.com/114.114.114.114
 server=/ccice.com/114.114.114.114
+server=/ccicgd.com/114.114.114.114
 server=/ccicgx.com/114.114.114.114
 server=/ccidcom.com/114.114.114.114
 server=/ccidconsulting.com/114.114.114.114
