accelerated-domains: add gzmachine.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38724,6 +38724,7 @@ server=/gzlyhlawyer.com/114.114.114.114
 server=/gzlz307.com/114.114.114.114
 server=/gzlzfm.com/114.114.114.114
 server=/gzm1.com/114.114.114.114
+server=/gzmachine.com/114.114.114.114
 server=/gzmama.com/114.114.114.114
 server=/gzmath.com/114.114.114.114
 server=/gzmc668.com/114.114.114.114
