accelerated-domains: add gzmstech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38737,6 +38737,7 @@ server=/gzmjhzs.com/114.114.114.114
 server=/gzmlfcyy.com/114.114.114.114
 server=/gzmpc.com/114.114.114.114
 server=/gzmri.com/114.114.114.114
+server=/gzmstech.com/114.114.114.114
 server=/gzmtr.com/114.114.114.114
 server=/gzmtrticket.com/114.114.114.114
 server=/gzmylike.com/114.114.114.114
