accelerated-domains: add iot-cas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46806,6 +46806,7 @@ server=/ioswg.com/114.114.114.114
 server=/iosyyds.com/114.114.114.114
 server=/ioszc.com/114.114.114.114
 server=/ioszn.com/114.114.114.114
+server=/iot-cas.com/114.114.114.114
 server=/iot.moe/114.114.114.114
 server=/iot0.net/114.114.114.114
 server=/iot1001.com/114.114.114.114
