accelerated-domains: add mywaymeta.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62112,6 +62112,7 @@ server=/myvs.download.prss.microsoft.com/114.114.114.114
 server=/myvsoncloud.com/114.114.114.114
 server=/mywakao.com/114.114.114.114
 server=/mywayboo.net/114.114.114.114
+server=/mywaymeta.com/114.114.114.114
 server=/myweb888.com/114.114.114.114
 server=/myweimai.com/114.114.114.114
 server=/mywhh.com/114.114.114.114
