accelerated-domains: add sunprocn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78549,6 +78549,7 @@ server=/sunowo.com/114.114.114.114
 server=/sunpala.com/114.114.114.114
 server=/sunpapergroup.com/114.114.114.114
 server=/sunpcm.com/114.114.114.114
+server=/sunprocn.com/114.114.114.114
 server=/sunpun.com/114.114.114.114
 server=/sunray2000.com/114.114.114.114
 server=/sunresin.net/114.114.114.114
