accelerated-domains: add gzchenggeng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38572,6 +38572,7 @@ server=/gzch120.com/114.114.114.114
 server=/gzch12333.com/114.114.114.114
 server=/gzchangke.com/114.114.114.114
 server=/gzchangzhe.com/114.114.114.114
+server=/gzchenggeng.com/114.114.114.114
 server=/gzchj.net/114.114.114.114
 server=/gzchupai.com/114.114.114.114
 server=/gzci.net/114.114.114.114
