accelerated-domains: add gz-cjjl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38513,6 +38513,7 @@ server=/gyzfbz.net/114.114.114.114
 server=/gyzsgd.com/114.114.114.114
 server=/gz-begreen.com/114.114.114.114
 server=/gz-chantou.com/114.114.114.114
+server=/gz-cjjl.com/114.114.114.114
 server=/gz-cmc.com/114.114.114.114
 server=/gz-cube.com/114.114.114.114
 server=/gz-data.com/114.114.114.114
