--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73040,6 +73040,7 @@ server=/schwarzeni.com/114.114.114.114
 server=/schwr.com/114.114.114.114
 server=/schxzx.com/114.114.114.114
 server=/sci-fifans.net/114.114.114.114
+server=/sci-gz.com/114.114.114.114
 server=/sci-hub.ee/114.114.114.114
 server=/sci-hub.ren/114.114.114.114
 server=/sci-hub.shop/114.114.114.114
