--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102409,6 +102409,7 @@ server=/zvstapp.com/114.114.114.114
 server=/zvsts.com/114.114.114.114
 server=/zvv.me/114.114.114.114
 server=/zw110.com/114.114.114.114
+server=/zw3dp.com/114.114.114.114
 server=/zw3w.com/114.114.114.114
 server=/zw69.com/114.114.114.114
 server=/zw885.com/114.114.114.114
