accelerated-domains: add cellprotek.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18588,6 +18588,7 @@ server=/cell-gene.com/114.114.114.114
 server=/cellixsoft.com/114.114.114.114
 server=/cellocation.com/114.114.114.114
 server=/cellprobio.com/114.114.114.114
+server=/cellprotek.com/114.114.114.114
 server=/cells-net.com/114.114.114.114
 server=/cells-net.net/114.114.114.114
 server=/cellwise-semi.com/114.114.114.114
