accelerated-domains: add haozhihs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39860,6 +39860,7 @@ server=/haozhai.com/114.114.114.114
 server=/haozhanhui.com/114.114.114.114
 server=/haozhebao.com/114.114.114.114
 server=/haozhexie.com/114.114.114.114
+server=/haozhihs.com/114.114.114.114
 server=/haozhuan.vip/114.114.114.114
 server=/haozhuangji.com/114.114.114.114
 server=/haozhuji.net/114.114.114.114
