--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61194,6 +61194,7 @@ server=/morefood.com/114.114.114.114
 server=/moregy.com/114.114.114.114
 server=/moreless.io/114.114.114.114
 server=/morelink.net/114.114.114.114
+server=/moremeat.com/114.114.114.114
 server=/moremoneyads.com/114.114.114.114
 server=/morequick.net/114.114.114.114
 server=/moresing.com/114.114.114.114
