accelerated-domains: add yuexiu-finance.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97614,6 +97614,7 @@ server=/yuexindianqi.com/114.114.114.114
 server=/yuexing.com/114.114.114.114
 server=/yuexinli.com/114.114.114.114
 server=/yuexirc.com/114.114.114.114
+server=/yuexiu-finance.com/114.114.114.114
 server=/yuexiu.com/114.114.114.114
 server=/yuexunedu.com/114.114.114.114
 server=/yuexunfanyi.com/114.114.114.114
