--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19795,6 +19795,7 @@ server=/chinabooktrading.com/114.114.114.114
 server=/chinabreed.com/114.114.114.114
 server=/chinabudd.com/114.114.114.114
 server=/chinabug.net/114.114.114.114
+server=/chinabulk.com/114.114.114.114
 server=/chinabus.info/114.114.114.114
 server=/chinabuses.com/114.114.114.114
 server=/chinabuy1002.com/114.114.114.114
