accelerated-domains: add cn-elite.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21721,6 +21721,7 @@ server=/cn-cg.com/114.114.114.114
 server=/cn-chx.com/114.114.114.114
 server=/cn-cr.com/114.114.114.114
 server=/cn-ebara.com/114.114.114.114
+server=/cn-elite.com/114.114.114.114
 server=/cn-em.com/114.114.114.114
 server=/cn-food.net/114.114.114.114
 server=/cn-healthcare.com/114.114.114.114
