accelerated-domains: add gyseals.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38485,6 +38485,7 @@ server=/gyrqfd.com/114.114.114.114
 server=/gyrsy.com/114.114.114.114
 server=/gyscw.com/114.114.114.114
 server=/gysdzy.com/114.114.114.114
+server=/gyseals.com/114.114.114.114
 server=/gyshwl.online/114.114.114.114
 server=/gysk.com/114.114.114.114
 server=/gysou.com/114.114.114.114
