--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38689,6 +38689,7 @@ server=/gzjisikj.com/114.114.114.114
 server=/gzjiunuo.com/114.114.114.114
 server=/gzjk120.com/114.114.114.114
 server=/gzjkfk.com/114.114.114.114
+server=/gzjkfund.com/114.114.114.114
 server=/gzjkqh.com/114.114.114.114
 server=/gzjkyljt.com/114.114.114.114
 server=/gzjob.net/114.114.114.114
