accelerated-domains: add lissgx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56293,6 +56293,7 @@ server=/lishuichayuan.com/114.114.114.114
 server=/lishuma.com/114.114.114.114
 server=/lisizhang.com/114.114.114.114
 server=/lisp123.com/114.114.114.114
+server=/lissgx.com/114.114.114.114
 server=/listary.net/114.114.114.114
 server=/listarypro.com/114.114.114.114
 server=/listeneer.com/114.114.114.114
