--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60337,6 +60337,7 @@ server=/mingbiao001.com/114.114.114.114
 server=/mingbiaohao.com/114.114.114.114
 server=/mingcalc.com/114.114.114.114
 server=/mingcha.org/114.114.114.114
+server=/mingchao.com/114.114.114.114
 server=/mingchaoonline.com/114.114.114.114
 server=/mingchaoyouxi.com/114.114.114.114
 server=/mingchatang.com/114.114.114.114
