--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66244,6 +66244,7 @@ server=/pangyuan.com/114.114.114.114
 server=/panjindamibest.com/114.114.114.114
 server=/panku.cc/114.114.114.114
 server=/panlai.com/114.114.114.114
+server=/panlan.com/114.114.114.114
 server=/panmaiquit.com/114.114.114.114
 server=/panmeme.com/114.114.114.114
 server=/pannacloud.com/114.114.114.114
