accelerated-domains: add qxad.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70545,6 +70545,7 @@ server=/qx121.com/114.114.114.114
 server=/qx162.com/114.114.114.114
 server=/qx66.cc/114.114.114.114
 server=/qx8.cc/114.114.114.114
+server=/qxad.com/114.114.114.114
 server=/qxbnkj.com/114.114.114.114
 server=/qxckjr.com/114.114.114.114
 server=/qxcu.com/114.114.114.114
