--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17581,6 +17581,7 @@ server=/cardqu.com/114.114.114.114
 server=/cardyang.com/114.114.114.114
 server=/care110.com/114.114.114.114
 server=/careerchina.com/114.114.114.114
+server=/careerexe.com/114.114.114.114
 server=/careerintlinc.com/114.114.114.114
 server=/careerqihang.com/114.114.114.114
 server=/careersky.org/114.114.114.114
