--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21713,6 +21713,7 @@ server=/cmzj.net/114.114.114.114
 server=/cmzyk.com/114.114.114.114
 server=/cn-5.com/114.114.114.114
 server=/cn-ab.com/114.114.114.114
+server=/cn-bldc.com/114.114.114.114
 server=/cn-bowei.com/114.114.114.114
 server=/cn-boxing.com/114.114.114.114
 server=/cn-c114.net/114.114.114.114
