accelerated-domains: add crgdpharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23423,6 +23423,7 @@ server=/cret-bio.com/114.114.114.114
 server=/crewcn.com/114.114.114.114
 server=/crfchina.com/114.114.114.114
 server=/crfsdi.com/114.114.114.114
+server=/crgdpharm.com/114.114.114.114
 server=/crgecent.com/114.114.114.114
 server=/crggcn.com/114.114.114.114
 server=/crgkxl.com/114.114.114.114
