accelerated-domains: add gdecn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33518,6 +33518,7 @@ server=/gddtop.com/114.114.114.114
 server=/gddyhb168.com/114.114.114.114
 server=/gdeams.com/114.114.114.114
 server=/gdebidding.com/114.114.114.114
+server=/gdecn.com/114.114.114.114
 server=/gdedu123.com/114.114.114.114
 server=/gdefair.com/114.114.114.114
 server=/gdems.com/114.114.114.114
