--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38908,6 +38908,7 @@ server=/gzyct.com/114.114.114.114
 server=/gzydnewmaterial.com/114.114.114.114
 server=/gzydong.com/114.114.114.114
 server=/gzydwh.com/114.114.114.114
+server=/gzyflw.com/114.114.114.114
 server=/gzyhg.vip/114.114.114.114
 server=/gzyitsy.com/114.114.114.114
 server=/gzylhyzx.com/114.114.114.114
