accelerated-domains: add matrix-chem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59040,6 +59040,7 @@ server=/matocloud.com/114.114.114.114
 server=/matongxue.com/114.114.114.114
 server=/matpool.com/114.114.114.114
 server=/matpool.net/114.114.114.114
+server=/matrix-chem.com/114.114.114.114
 server=/matrix-net.tech/114.114.114.114
 server=/matrixchuang.com/114.114.114.114
 server=/matrixerse.com/114.114.114.114
