accelerated-domains: add niyingseo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63371,6 +63371,7 @@ server=/nix.pub/114.114.114.114
 server=/nixi.win/114.114.114.114
 server=/nixingtao.com/114.114.114.114
 server=/nixwang.com/114.114.114.114
+server=/niyingseo.com/114.114.114.114
 server=/nizhan888.com/114.114.114.114
 server=/nizi88.com/114.114.114.114
 server=/nizkeyboard.com/114.114.114.114
