accelerated-domains: add z-henergy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98701,6 +98701,7 @@ server=/yzzy20-play.com/114.114.114.114
 server=/yzzyimages.com/114.114.114.114
 server=/yzzzn.com/114.114.114.114
 server=/z-bank.com/114.114.114.114
+server=/z-henergy.com/114.114.114.114
 server=/z-inn.com/114.114.114.114
 server=/z.biz/114.114.114.114
 server=/z.wiki/114.114.114.114
