--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20200,6 +20200,7 @@ server=/chinaqoe.net/114.114.114.114
 server=/chinaquest.com/114.114.114.114
 server=/chinaquickpcb.com/114.114.114.114
 server=/chinaqw.com/114.114.114.114
+server=/chinaray-oled.com/114.114.114.114
 server=/chinarayying.com/114.114.114.114
 server=/chinardr.com/114.114.114.114
 server=/chinardr.net/114.114.114.114
