--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33370,6 +33370,7 @@ server=/gbcnvip15.com/114.114.114.114
 server=/gbdex.com/114.114.114.114
 server=/gbdz.net/114.114.114.114
 server=/gbfedashb4.fun/114.114.114.114
+server=/gbffchina.com/114.114.114.114
 server=/gbgba.com/114.114.114.114
 server=/gbgedashb8.fun/114.114.114.114
 server=/gbhome.com/114.114.114.114
