accelerated-domains: add gz-gree.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38530,6 +38530,7 @@ server=/gz-data.com/114.114.114.114
 server=/gz-dazo.com/114.114.114.114
 server=/gz-ejoy.com/114.114.114.114
 server=/gz-goam.com/114.114.114.114
+server=/gz-gree.com/114.114.114.114
 server=/gz-haoxiang.com/114.114.114.114
 server=/gz-hipower.com/114.114.114.114
 server=/gz-huayuan.com/114.114.114.114
