--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38727,6 +38727,7 @@ server=/gzkz88.com/114.114.114.114
 server=/gzlarc.com/114.114.114.114
 server=/gzlayl.com/114.114.114.114
 server=/gzlex.com/114.114.114.114
+server=/gzli.com/114.114.114.114
 server=/gzlig.com/114.114.114.114
 server=/gzlingli.com/114.114.114.114
 server=/gzliyuanhb.com/114.114.114.114
