accelerated-domains: add hmadgz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41916,6 +41916,7 @@ server=/hm16888.net/114.114.114.114
 server=/hm169.com/114.114.114.114
 server=/hm371.com/114.114.114.114
 server=/hm5988.com/114.114.114.114
+server=/hmadgz.com/114.114.114.114
 server=/hmarathon.com/114.114.114.114
 server=/hmchairs.com/114.114.114.114
 server=/hmdx.net/114.114.114.114
