--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81739,6 +81739,7 @@ server=/tingyutech.net/114.114.114.114
 server=/tiniangroup.com/114.114.114.114
 server=/tinigame.xyz/114.114.114.114
 server=/tinkerpatch.com/114.114.114.114
+server=/tinktek.net/114.114.114.114
 server=/tinman798.net/114.114.114.114
 server=/tinning-automation.com/114.114.114.114
 server=/tinsecret.com/114.114.114.114
