--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49070,6 +49070,7 @@ server=/jiexitz.com/114.114.114.114
 server=/jiexunyun.net/114.114.114.114
 server=/jieyan110.com/114.114.114.114
 server=/jieyang.la/114.114.114.114
+server=/jieyigroup.net/114.114.114.114
 server=/jieyixiu.com/114.114.114.114
 server=/jieyou.com/114.114.114.114
 server=/jieyou.pro/114.114.114.114
