accelerated-domains: add gzmedri.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38746,6 +38746,7 @@ server=/gzmath.com/114.114.114.114
 server=/gzmc668.com/114.114.114.114
 server=/gzmcg.com/114.114.114.114
 server=/gzmediaclick.com/114.114.114.114
+server=/gzmedri.com/114.114.114.114
 server=/gzmeichang.com/114.114.114.114
 server=/gzmiden.com/114.114.114.114
 server=/gzmiyuan.com/114.114.114.114
