accelerated-domains: add xiweigas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92076,6 +92076,7 @@ server=/xiwangd.com/114.114.114.114
 server=/xiwanglife.com/114.114.114.114
 server=/xiwangxiaoyuan.com/114.114.114.114
 server=/xiwantrip.com/114.114.114.114
+server=/xiweigas.com/114.114.114.114
 server=/xiwenquan.com/114.114.114.114
 server=/xiwicloud.com/114.114.114.114
 server=/xiwise.com/114.114.114.114
